5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4144/executions/1638_87.log
== TEST (2019-04-13 15:33:36) 
-- CODE:
a=int(input("digite um numero:"))
b=int(input("digite um numero:"))
c=int(input("digite um numero:"))
if (a>b):
	print(b)
if (a>c):
	print(c)
if (b>a):
	print(a)
if (b>c):
	print(c)
if (c>a):
	print(a)
if (c>b):
	print(b)
-- OUTPUT:
35
258
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 15:36:21) 
-- CODE:
a=int(input("digite um numero:"))
b=int(input("digite um numero:"))
c=int(input("digite um numero:"))
if (a>b>c):
	print(c)
if (a>c>b):
	print(b)
if (b>a>c):
	print(c)
if (b>c>a):
	print(a)
if (c>a>b):
	print(b)
if (c>b>a):
	print(a)6
-- ERROR:
File "XXXX", line 15
    print(a)6
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 15:36:55) 
-- CODE:
a=int(input("digite um numero:"))
b=int(input("digite um numero:"))
c=int(input("digite um numero:"))
if (a>b>c):
	print(c)
if (a>c>b):
	print(b)
if (b>a>c):
	print(c)
if (b>c>a):
	print(a)
if (c>a>b):
	print(b)
if (c>b>a):
	print(a)
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 15:37:22) 
-- CODE:
a=int(input("digite um numero:"))
b=int(input("digite um numero:"))
c=int(input("digite um numero:"))
if (a>b>c):
	print(c)
if (a>c>b):
	print(b)
if (b>a>c):
	print(c)
if (b>c>a):
	print(a)
if (c>a>b):
	print(b)
if (c>b>a):
	print(a)
-- EXECUTION TIME:
0.127224
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
35
---- user output:
35
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
55
---- user output:
55
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
123
---- user output:
123
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
